--- a/demo.html
+++ b/demo.html
@@ -6,11 +6,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="usage.js"></script>
 	<style type="text/css">
+		body{
+			width: 960px;
+			margin: auto;
+		}
+		img{
+			width: 100%;
+		}
 		.banner{
 			text-align: center;
-		}
-		.img{
-			width: 100%;
 		}
 	</style>
 </head>
