--- a/demo.html
+++ b/demo.html
@@ -3,20 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>demo</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="usage.js"></script>
-	<style type="text/css">
-		body{
-			width: 960px;
-			margin: auto;
-		}
-		img{
-			width: 100%;
-		}
-		.banner{
-			text-align: center;
-		}
-	</style>
 </head>
 <body>
 	<div class="banner">
@@ -24,5 +13,16 @@
 			<img class="img" src="./imgs/1200x380.png" title="輸入廣告促銷說明文字" alt="輸入廣告促銷說明文字">
 		</a>
 	</div>
+
+	<script type="text/javascript">
+		$('.banner').banner({
+			openAtStart: true,
+			autoToggle: true
+		});
+		$('.banner').banner({'open'
+
+		});
+	</script>
+
 </body>
 </html>
