--- a/demo.html
+++ b/demo.html
@@ -19,9 +19,7 @@
 			openAtStart: true,
 			autoToggle: true
 		});
-		$('.banner').banner({'open'
-
-		});
+		$('.banner').banner('open');
 	</script>
 
 </body>
