--- a/demo.html
+++ b/demo.html
@@ -17,10 +17,19 @@
 	<script type="text/javascript">
 		$('.banner').banner({
 			openAtStart: true,
-			autoToggle: true
+			autoToggle: true,
+			transition: true
 		});
-		$('.banner').banner('open');
+		// $('.banner').banner('open',function(option){
+		// 	console.log(option);
+		// });
+		
+		// $('.banner').banner('toggle',function(){
+		// 	console.log(option);
+		// });
 	</script>
+
+	
 
 </body>
 </html>
