--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8">
+	<!-- <meta charset="UTF-8"> -->
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>demo</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -20,13 +21,7 @@
 			autoToggle: true,
 			transition: true
 		});
-		// $('.banner').banner('open',function(option){
-		// 	console.log(option);
-		// });
 		
-		// $('.banner').banner('toggle',function(){
-		// 	console.log(option);
-		// });
 	</script>
 
 	
