--- a/demo.html
+++ b/demo.html
@@ -17,9 +17,14 @@
 
 	<script type="text/javascript">
 		$('.banner').banner({
-			openAtStart: true,
+			openAtStart: false,
 			autoToggle: true,
-			transition: true
+			transition: true,
+			button: {
+				closeText: '收起', 
+				openText: '打開', 
+				class: 'hi' 
+			}
 		});
 		
 	</script>
