--- a/demo.html
+++ b/demo.html
@@ -17,13 +17,13 @@
 
 	<script type="text/javascript">
 		$('.banner').banner({
-			openAtStart: false,
+			openAtStart: true,
 			autoToggle: true,
 			transition: true,
 			button: {
-				closeText: '收起', 
-				openText: '打開', 
-				class: 'hi' 
+				closeText: '收合', 
+				openText: '展開', 
+				class: 'yo' 
 			}
 		});
 		
